<resources>
    <string name="app_name">Agenda de Salões e Barbearias</string>

    <!-- Login Activity -->
    <string name="sign_up_text">Cadastre-se</string>
    <string name="btn_login_text">Logar</string>
    <string name="dont_have_an_account">Não tem uma conta?</string>
    <string name="email_edit_hint">E-mail</string>
    <string name="password_edit_hint">Password</string>

    <!-- Sign up Activity -->
    <string name="already_have_an_account">Já tem conta?</string>
    <string name="sign_in">Faça login!</string>
    <string name="user_name_edit_hint">Nome de Usuário</string>
    <string name="btn_sign_up_text">Cadastrar</string>
    <string name="text_sign_up_title">Cadastro</string>
    <string name="radio_client">Cliente</string>
    <string name="radio_prof">Profissional</string>

    <!-- Sign up Commerce Fragment -->
    <string name="radio_beautyParlor">Salão</string>
    <string name="radio_barbershop">Barbearia</string>
    <string name="commerce_name_edit_hint">Nome do estabelecimento</string>
    <string name="lbl_adress">Endereço</string>
    <string name="hint_street">Rua</string>
    <string name="hint_num">Número</string>
    <string name="hint_district">Bairro</string>
    <string name="hint_city">Cidade</string>
    <string name="hint_state">Estado</string>
    <string name="tel_edit_hint">Telefone</string>
    <string name="open_time_edit_hint">Horário de abertura</string>
    <string name="close_time_edit_hint">Horário de fechamento</string>

    <!-- FirebaseControl -->
    <string name="sign_up_is_successful">Cadastro realizado com sucesso</string>
    <string name="enter_a_stronger_password">Digite uma senha mais forte</string>
    <string name="invalid_email">E-mail inválido</string>
    <string name="this_email_is_already_in_use">Esse e-mail já está em uso</string>
    <string name="error_when_registering">Erro ao efetuar o cadastro</string>
    <string name="error_email_not_correct">E-mail errado</string>
    <string name="error_passwaord_not_correct">Senha incorreta</string>
    <string name="toast_image_uploaded_sucessfully">Imagem armazenada com sucesso</string>
    <string name="toast_text_uploading_img">Armazenando imagem</string>
    <string name="toast_error_image_uploaded">Error ao carregar imagem</string>
    <string name="toast_error_loading_info">Erro ao carregar as informações</string>
    <string name="toast_successfully_add_service">Serviço adicionado com sucesso</string>
    <string name="toast_error_add_service">Ocorreu um erro ao adicionar o serviço, serviço não adicionado</string>
    <string name="toast_successfully_add_employee">Funcionário adicionado com sucesso</string>
    <string name="toast_error_add_employee">Ocorreu um erro ao adicionar o funcionário, funcionário não adicionado</string>

    <!-- Client User Activity -->
    <string name="main_user_tab">Principal</string>
    <string name="schedule_user_tab">Agenda</string>

    <!-- Commerce User Activity -->
    <string name="commerce_main_fragment_tab_title">Principal</string>
    <string name="commerce_schedule_fragment_tab_title">Agenda</string>
    <string name="commerce_reports_fragment_tab_title">Relatórios</string>
    <string name="commerce_clients_fragment_tab_title">Clientes</string>

    <!-- rv_main_layout -->
    <string name="lbl_name">Nome:</string>
    <string name="lbl_type">Tipo:</string>
    <string name="lbl_rating">Avaliação:</string>
    <string name="lbl_street">Rua:</string>
    <string name="lbl_num">Nº </string>

    <!-- Commerce View Main Fragment  -->
    <string name="lbl_services">Serviços</string>
    <string name="lbl_employees">Funcionários</string>
    <string name="toast_time_spinner_nothing_selected_txt">Selecione o tempo do serviço</string>

    <!-- Commerce View Clients Fragment -->
    <string name="lbl_clients">Clientes</string>

    <!-- Commerce View Reports Fragment -->
    <string name="lbl_reports">Relatórios</string>

    <!-- Commerce View Schedule Fragment -->
    <string name="lbl_schedule">Agenda</string>

    <!-- Commerce Edit Info Activity -->
    <string name="txtTitleEditInfo">Editar Informações</string>
    <string name="lbl_background_img_edit_info">Imagem de fundo</string>
    <string name="lbl_logo_img_edit_info">Logo</string>
    <string name="lbl_commerce_name_edit_info">Nome da empresa</string>
    <string name="lbl_commerce_email_edit_info">Email</string>
    <string name="lbl_commerce_Telephone_edit_info">Telefone</string>
    <string name="lbl_commerce_type_edit_info">Tipo de empresa</string>
    <string name="lbl_commerce_address_edit_info">Endereço</string>
    <string name="lbl_commerce_street_edit_info">Rua:</string>
    <string name="lbl_commerce_num_edit_info">Nº</string>
    <string name="lbl_commerce_district_edit_info">Bairro:</string>
    <string name="lbl_commerce_city_edit_info">Cidade:</string>
    <string name="lbl_commerce_state_edit_info">Estado:</string>
    <string name="lbl_commerce_ed_time_edit_info">Horário de Encerramento</string>
    <string name="lbl_commerce_op_time_edit_info">Horário de Abertura</string>
    <string name="toast_text_img_upload_in_progress">Upload em progresso</string>

    <!-- EditCommerce Info Menu -->
    <string name="menu_edit_info_btn_save_title">Salvar</string>


    <!-- Client Scheduling Activity -->
    <string name="title_toolbar_client_scheduling_activity">Agendar Horário</string>

    <!-- Rv Services Adapter Layout -->
    <string name="txt_schedule_button">Agendar</string>

    <!-- Dialog AddService -->
    <string name="dialog_add_services_title">Adicionar serviço</string>
    <string name="et_hint_name_dialog_add_service">Nome do serviço</string>
    <string name="et_hint_price_dialog_add_service">Preço do serviço</string>
    <string name="lbl_service_time">Tempo gasto</string>
    <string name="btn_cancel_txt">Cancelar</string>
    <string name="btn_add_txt">Adicionar</string>
    <string name="toast_text_employees_is_empty">Adicione um funcionário para executar o serviço</string>

    <!-- Dialog AddEmployees -->
    <string name="dialog_add_employees_title">Acicionar funcionário</string>
    <string name="et_hint_name_dialog_add_employee">Nome do funcionário</string>
    <string name="et_hint_work_dialog_add_employee">Profissão do funcionário</string>

    <!-- Service Model -->
    <string name="thirty_minutes">30 minutos</string>
    <string name="sixty_minutes">1 hora</string>
    <string name="ninety_minutes">1 hora e 30 minutos</string>
    <string name="one_hundred_and_twenty_minutes">2 horas</string>
    <string name="one_hundred_and_fifty_minutes">2 horas e 30 minutos</string>
    <string name="one_hundred_and_eighty_minutes">3 horas</string>
    <string name="lbl_choose_employees_for_service">Selecione os empregados que farão o serviço</string>


</resources>
