<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/text_sign_up_title"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/text_title_size"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <RadioGroup
        android:id="@+id/radioGroup_client_or_prof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" >

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioBtn_client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/radio_client"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_radio_size"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioBtn_commerce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_prof"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_radio_size"
            android:onClick="onRadioButtonClicked"
            />

    </RadioGroup>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_client_or_prof" />


</androidx.constraintlayout.widget.ConstraintLayout>